...
      color: Theme.of(context).appBarTheme.backgroundColor,
      child: Row(
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          // Previous page button
          IconButton(
            key: const ValueKey('go_back_button'),
            tooltip: 'Go back',
            icon: const Icon(
              Icons.arrow_back_ios_new,
              size: 20,
            ),
            onPressed: () {
...
          Row(
            children: [
              _buildNavItem(context, Routes.home, 'Home', widget.currentLocation, key: ValueKey('home_button')),
              if (Provider.of<AuthViewModel>(context, listen: false).status == AuthStatus.authenticated)
                _buildNavItem(context, Routes.library, 'Library', widget.currentLocation, key: ValueKey('library_button')),
              _buildNavItem(context, Routes.forums, 'Forums', widget.currentLocation),
              _buildNavItem(context, Routes.advancedSearch, 'Search', widget.currentLocation, key: ValueKey('search_button')),
              // If the user type is operator, show the admin panel
              if (Provider.of<AuthViewModel>(context, listen: false).user?.type == 'operator')
                _buildNavItem(context, Routes.operatorDashboard, 'Operator Dashboard', widget.currentLocation),
              // If the user type is publisher, show the publisher dashboard
              // if (Provider.of<AuthViewModel>(context, listen: false).user?.type == 'publisher')
              //   _buildNavItem(context, Routes.publisherDashboard, 'Publisher Dashboard', widget.currentLocation),
...
      }
      
      return [
        const SizedBox(
          height: 100,
          child: Center(
            child: Text('No games found'),
          ),
        ),
      ];
    }
    
    return _searchResults.map((game) {
...
