...
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        // Title search
        SizedBox(
          height: 36,
          child: TextField(
            key: ValueKey('game_title'),
            controller: _searchController,
            focusNode: _searchFocusNode,
            decoration: InputDecoration(
              hintText: 'Search by title',
              prefixIcon: Icon(
                Icons.search,
...
        SizedBox(height: 32),
        
        SizedBox(
          width: 128,
          height: 36,
          child: ElevatedButton(
            key: ValueKey('apply_filter_button'),
            style: theme.elevatedButtonTheme.style,
            onPressed: () {
              widget.viewModel.applyFilters();
            },
            child: Text(
              'Apply filter',
...
