...
  String? _selectedPlaytime;
  // ProfileViewModel for image handling
  late ProfileViewModel profileViewModel;

  final List<String> _genres = [
    'Action RPG', 'Strategy', 'FPS', 'MMORPG', 'Racing',
    'Sports', 'Simulation', 'Adventure', 'Horror', 'Indie'
  ];

  final List<String> _platforms = [
    'PC Gaming', 'PlayStation', 'Xbox', 'Nintendo Switch', 'Mobile Gaming'
  ];

...
